Fixed account creation password visibility button styles

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -221,7 +221,7 @@
 
     .react-tel-input {
       .form-control {
-        width: 100%;
+        width: 100% !important;
       }
     }
   }
